[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steamprofile"
version = "0.1.3"
description = "Gather information about steam profiles"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
  { name="Aaron Levi Can", email="aaronlevican@gmail.com" }
]

dependencies = ["requests", "Unidecode"]

[project.urls]
"Homepage" = "https://github.com/aaronlyy/steamprofile"
"Issues" = "https://github.com/aaronlyy/steamprofile/issues"

[tool.setuptools.packages.find]
where = ["src"]
